Created system for adding top level comments, and fixed da bug where I was adding Ideas without setting the owner user